   This has been fixed, and the code has been reordered to reflect this
   - although the reordering does not affect the functionality.
 - Add libtoolize to autogen.sh. Thanks to Andreas Sartori
 - Escape data fed into mysql queries. Probably needed for other
   modules too, but its likely to be module-specific.
   Thanks to Farzad FARID
 - Allow the LDAP protocol version to be specified

----------------------------------------------------------------------

22nd June 2005
(Horms)
 * 1.17
 - Added explicit domain option. Brendan O'Dea
 - Make sure all source files are inculded in tar ball,
   regardless of what parts of the code are excluded from the build
   by configure.
 - Fixed possible buffer overflow in berkely db module
   Chris Stratford
 - Option to disable compilation of ldap (latex) documentation
 - Use ldap_initialize() when compiled against openssl (>=2.0.0)
   to allow arbitary ldap urls. In particular, ldaps is now supported.
 - Don't add libraries discovered in configure to LDADD.
 - Better loging connection failures relating to capabilities
   on the real-server
 - Pass asynchronous messages sent by the real-server during
   authentication back to the end-user
 - When add_domain is used, allow the depth to which the domain
   name has leading levels stripped.
 - Fix gcc-4.0 compile problem. Andreas Jochens
 - Removed bogus loging that occurs before the logger is
   fully intialised when debug is enabled. Roberto Suarez Soto
 - Add link daemon module against socket libraries
 - Reopen logger so child processes get their own file descriptors
 - Fix segmentation fault when timeout is set to 0. John Capo
 - Fix ODBC library detection
 - Fix printing of server_port ojects (in particular the logging
   of the outgoing_server option)
 - Use pg_config for Postgress library detection

----------------------------------------------------------------------

27th May 2004
(Horms)
 * 1.15
 - I would like to thank Fastmail.FM for sponsoring work